<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/select_item_root"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:clickable="true">

    <CheckBox
        android:id="@+id/select_item_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        app:layout_constraintBottom_toTopOf="@id/select_item_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/select_item_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:clickable="false"
        app:layout_constraintBottom_toTopOf="@id/select_item_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/select_item_checkbox"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Lorem ipsum" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/select_item_divider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>